--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # 同时开启 4 台虚拟机并行编译不同架构
+        # 同时开启 4 台虚拟机并行编译
         platform: ["x86/64", "rockchip/armv8", "mediatek/filogic", "ramips/mt7621"]
 
     steps:
@@ -28,7 +28,6 @@ jobs:
 
       - name: Clone ImmortalWrt
         run: |
-          # 使用 --depth 1 提高克隆速度
           git clone -b master --depth 1 https://github.com/immortalwrt/immortalwrt.git source
           cd source
           ./scripts/feeds update -a
@@ -36,21 +35,19 @@ jobs:
 
       - name: Setup Custom Package (Fixing Source Path)
         run: |
-          # 1. 为 iptest 创建符合 Makefile 要求的结构
+          # 1. 为 iptest 创建符合 Makefile 要求的结构 (./src/*)
           mkdir -p source/package/custom/iptest/src
           
-          # 2. 将仓库根目录的 iptest.go 移动到 src 目录下（适配你的 Makefile ./src/*）
-          if [ -f "iptest/iptest.go" ]; then
-            cp iptest/iptest.go source/package/custom/iptest/src/
+          # 2. 将仓库根目录的 Go 源码移入 src 目录
+          if [ -d "iptest" ]; then
+            find iptest/ -name "*.go" -exec cp {} source/package/custom/iptest/src/ \;
+            cp iptest/Makefile source/package/custom/iptest/Makefile
           fi
-          # 如果你有其他 go 文件，也一并移动
-          cp iptest/*.go source/package/custom/iptest/src/ 2>/dev/null || true
           
-          # 3. 复制 Makefile 到插件根目录
-          cp iptest/Makefile source/package/custom/iptest/Makefile
-          
-          # 4. 复制 LuCI 界面部分
-          cp -r luci-app-iptest source/package/custom/
+          # 3. 复制 LuCI 界面部分
+          if [ -d "luci-app-iptest" ]; then
+            cp -r luci-app-iptest source/package/custom/
+          fi
 
       - name: Compile Packages
         run: |
@@ -58,16 +55,16 @@ jobs:
           TARGET=$(echo ${{ matrix.platform }} | cut -d'/' -f1)
           SUBTARGET=$(echo ${{ matrix.platform }} | cut -d'/' -f2)
           
-          # --- 写入编译配置 ---
+          # 写入编译配置
           echo "CONFIG_TARGET_${TARGET}=y" > .config
           echo "CONFIG_TARGET_${TARGET}_${SUBTARGET}=y" >> .config
           
-          # 为 RAX3000M 开启特定优化
+          # RAX3000M 特殊优化
           if [ "$SUBTARGET" == "filogic" ]; then
             echo "CONFIG_TARGET_DEVICE_mediatek_filogic_DEVICE_cmcc_rax3000m=y" >> .config
           fi
           
-          # 开启双格式支持并选中插件
+          # 同时编译 APK 和 IPK 格式
           echo "CONFIG_PACKAGE_APK=y" >> .config
           echo "CONFIG_PACKAGE_IPKG=y" >> .config
           echo "CONFIG_PACKAGE_iptest=m" >> .config
@@ -75,40 +72,29 @@ jobs:
           
           make defconfig
           
-          # 执行编译（去掉了 || true，报错会立即停止并显示日志以便排查）
-          echo ">> 编译核心程序..."
+          echo ">> 开始编译..."
           make package/custom/iptest/compile V=s -j$(nproc)
-          
-          echo ">> 编译界面程序..."
           make package/custom/luci-app-iptest/compile V=s -j$(nproc)
 
       - name: Organize Files
         run: |
           mkdir -p publish
-          # 获取当前日期用于区分版本
-          DATE_TAG=$(date +%Y%m%d)
-          # 替换平台斜杠，如 x86/64 -> x86_64
-          PLAT_TAG=$(echo ${{ matrix.platform }} | tr '/' '_')
-          
-          echo ">> 正在收集产物..."
-          find source/bin/packages/ -type f \( -name "*.ipk" -o -name "*.apk" \) -name "*iptest*" | while read -r file; do
-            ext="${file##*.}"
-            base=$(basename "$file" ".$ext")
-            # 最终文件名格式：iptest_1.2-1_x86_64_20251220.ipk
-            cp "$file" "publish/${base}_${PLAT_TAG}_${DATE_TAG}.${ext}"
-          done
+          echo ">> 正在收集原始文件名产物..."
+          # 直接复制原始文件，不添加时间戳或平台后缀
+          find source/bin/packages/ -type f \( -name "*.ipk" -o -name "*.apk" \) -name "*iptest*" -exec cp {} publish/ \;
 
       - name: Check Results
         run: |
+          echo "📦 最终生成的安装包清单:"
+          ls -lh publish/
           if [ -z "$(ls -A publish)" ]; then
-            echo "❌ 错误：未发现编译产物！请检查上方编译日志。"
+            echo "❌ 错误：未发现产物，请检查编译日志！"
             exit 1
           fi
-          ls -lh publish/
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          # 产物包名：iptest-x86_64 等
+          # 通过 Artifact 名称区分平台，内部文件保持原名
           name: iptest-${{ matrix.platform == 'x86/64' && 'x86_64' || (matrix.platform == 'rockchip/armv8' && 'rockchip_armv8' || (matrix.platform == 'mediatek/filogic' && 'filogic' || 'mt7621')) }}
           path: publish/
