--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        # 并行编译 4 种架构
         platform: ["x86/64", "rockchip/armv8", "mediatek/filogic", "ramips/mt7621"]
 
     steps:
@@ -21,7 +22,7 @@ jobs:
       - name: Initialization Environment
         run: |
           sudo apt update
-          # 核心修复：加入 python3-pyelftools
+          # 安装完整编译所需的 Python 库和基础工具
           sudo apt install -y build-essential clang flex bison g++ gawk gcc-multilib g++-multilib \
           gettext git libncurses-dev libssl-dev python3-setuptools python3-dev python3-pyelftools \
           rsync unzip zlib1g-dev file wget subversion swig
@@ -35,11 +36,16 @@ jobs:
 
       - name: Setup Custom Package
         run: |
+          # 1. 为 iptest 创建符合 Makefile 要求的结构
           mkdir -p source/package/custom/iptest/src
+          
+          # 2. 复制 Go 源码到 src 目录 (适配 Makefile 中的 ./src/*)
           if [ -d "iptest" ]; then
             find iptest/ -maxdepth 1 -type f \( -name "*.go" -o -name "*.mod" -o -name "*.sum" \) -exec cp {} source/package/custom/iptest/src/ \;
             cp iptest/Makefile source/package/custom/iptest/Makefile
           fi
+          
+          # 3. 复制 LuCI 界面部分
           if [ -d "luci-app-iptest" ]; then
             cp -r luci-app-iptest source/package/custom/
           fi
@@ -50,13 +56,16 @@ jobs:
           TARGET=$(echo ${{ matrix.platform }} | cut -d'/' -f1)
           SUBTARGET=$(echo ${{ matrix.platform }} | cut -d'/' -f2)
           
+          # 写入配置
           echo "CONFIG_TARGET_${TARGET}=y" > .config
           echo "CONFIG_TARGET_${TARGET}_${SUBTARGET}=y" >> .config
           
+          # 针对 RAX3000M 的特定配置
           if [ "$SUBTARGET" == "filogic" ]; then
             echo "CONFIG_TARGET_DEVICE_mediatek_filogic_DEVICE_cmcc_rax3000m=y" >> .config
           fi
           
+          # 开启双格式支持并选中插件
           echo "CONFIG_PACKAGE_APK=y" >> .config
           echo "CONFIG_PACKAGE_IPKG=y" >> .config
           echo "CONFIG_PACKAGE_iptest=m" >> .config
@@ -64,25 +73,36 @@ jobs:
           
           make defconfig
           
-          echo ">> 正在编译..."
+          # 关键修正：先安装必要的宿主机工具和工具链，解决 openssl 等文件缺失问题
+          echo ">> 正在准备宿主机工具和工具链 (此步骤耗时较长)..."
+          make tools/install -j$(nproc)
+          make toolchain/install -j$(nproc)
+          
+          echo ">> 正在编译核心程序..."
           make package/custom/iptest/compile V=s -j$(nproc)
+          
+          echo ">> 正在编译界面程序..."
           make package/custom/luci-app-iptest/compile V=s -j$(nproc)
 
       - name: Organize Files
         run: |
           mkdir -p publish
+          echo ">> 搜集编译产物..."
+          # 搜集所有原始文件名的 ipk 和 apk
           find source/bin/packages/ -type f \( -name "*.ipk" -o -name "*.apk" \) -name "*iptest*" -exec cp {} publish/ \;
 
       - name: Check Results
         run: |
+          echo "📦 最终产物清单:"
           ls -lh publish/
           if [ -z "$(ls -A publish)" ]; then
-            echo "❌ 错误: 未发现产物!"
+            echo "❌ 错误: 未发现编译产物!"
             exit 1
           fi
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
+          # 下载时显示的名称，内部文件名保持原样
           name: iptest-${{ matrix.platform == 'x86/64' && 'x86_64' || (matrix.platform == 'rockchip/armv8' && 'rockchip_armv8' || (matrix.platform == 'mediatek/filogic' && 'filogic' || 'mt7621')) }}
           path: publish/
