Refactor iptest Makefile for package details
Updated package metadata and build instructions.

--- a/iptest/Makefile
+++ b/iptest/Makefile
@@ -1,37 +1,32 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=iptest
-PKG_VERSION:=1.2
+PKG_VERSION:=1.2        # 随便填个版本号
 PKG_RELEASE:=1
 
 include $(INCLUDE_DIR)/package.mk
 include $(TOPDIR)/feeds/packages/lang/golang/golang-package.mk
 
 define Package/iptest
-  SECTION:=utils
-  CATEGORY:=Utilities
-  TITLE:=Cloudflare IP Tester
-  DEPENDS:=$(GO_ARCH_DEPENDS) +ca-bundle
+  SECTION:=net
+  CATEGORY:=Network
+  TITLE:=iptest - IP Test Tool
+  # 如果有依赖（如需要 libc 或其他包），在这里加，例如 DEPENDS:= +libpthread
 endef
 
-# 核心修正：取消 GO_PKG 的自动推导，直接指定 build 路径
-GO_PKG_BUILD_PKG:=.
-
-define Build/Prepare
-	mkdir -p $(PKG_BUILD_DIR)
-	$(CP) ./src/* $(PKG_BUILD_DIR)/
+define Package/iptest/description
+  A simple IP testing tool written in Go.
 endef
+
+# 模块名必须和 go.mod 里的 module xxx 一致
+GO_PKG:=iptest
+
+# 如果你的程序有多个 binary 或特殊编译 flags，可以在这里加
+# GO_PKG_BUILD_FLAGS:= -tags netgo
 
 define Build/Compile
-	( cd $(PKG_BUILD_DIR); \
-		$(GO_PKG_VARS) \
-		go build -v -o $(PKG_INSTALL_DIR)/usr/bin/iptest ./iptest.go \
-	)
+	$(call GoPackage/Build/Compile)
 endef
 
-define Package/iptest/install
-	$(INSTALL_DIR) $(1)/usr/bin
-	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/bin/iptest $(1)/usr/bin/iptest
-endef
-
+$(eval $(call GoPackage,iptest))
 $(eval $(call BuildPackage,iptest))
