--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,84 +1,35 @@
-name: Build All Platforms
+include $(TOPDIR)/rules.mk
 
-on:
-  workflow_dispatch:
-  push:
-    branches: [ main ]
+PKG_NAME:=iptest
+PKG_VERSION:=1.2        # 随便填个版本号
+PKG_RELEASE:=1
 
-jobs:
-  build:
-    name: Build for ${{ matrix.platform }}
-    runs-on: ubuntu-24.04
-    strategy:
-      fail-fast: false
-      matrix:
-        # 并行编译 4 种架构
-        platform: ["x86/64", "rockchip/armv8", "mediatek/filogic", "ramips/mt7621"]
+include $(INCLUDE_DIR)/package.mk
+include $(TOPDIR)/feeds/packages/lang/golang/golang-package.mk
 
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+define Package/iptest
+  SECTION:=net
+  CATEGORY:=Network
+  TITLE:=iptest - IP Test Tool
+  # 如果有依赖（如需要 libc 或其他包），在这里加，例如 DEPENDS:= +libpthread
+endef
 
-      - name: Initialization Environment
-        run: |
-          sudo apt update
-          # 安装完整编译所需的 Python 库和基础工具
-          sudo apt install -y build-essential clang flex bison g++ gawk gcc-multilib g++-multilib \
-          gettext git libncurses-dev libssl-dev python3-setuptools python3-dev python3-pyelftools \
-          rsync unzip zlib1g-dev file wget subversion swig
+define Package/iptest/description
+  A simple IP testing tool written in Go.
+endef
 
-      - name: Clone ImmortalWrt
-        run: |
-          git clone -b master --depth 1 https://github.com/immortalwrt/immortalwrt.git source
-          cd source
-          ./scripts/feeds update -a
-          ./scripts/feeds install -a
+# 模块名必须和 go.mod 里的 module xxx 一致
+GO_PKG:=iptest
 
-      - name: Setup Custom Package
-        run: |
-          # 创建目标目录结构
-          mkdir -p source/package/custom/iptest/src
-          
-          # 复制 Makefile 到包根目录
-          if [ -f "iptest/Makefile" ]; then
-            cp "iptest/Makefile" source/package/custom/iptest/Makefile
-          else
-            echo "错误: iptest/Makefile 不存在！"
-            exit 1
-          fi
-          
-          # 复制源码到 src 目录（现在仓库中 iptest/ 直接包含 go.mod、go.sum、iptest.go）
-          if [ -d "iptest" ]; then
-            cp -r iptest/* source/package/custom/iptest/src/
-            # 防止误复制 Makefile 到 src（应该只在包根）
-            rm -f source/package/custom/iptest/src/Makefile
-          else
-            echo "错误: iptest 目录不存在！"
-            exit 1
-          fi
-          
-          # 复制 LuCI 界面部分（如果存在）
-          if [ -d "luci-app-iptest" ]; then
-            cp -r luci-app-iptest source/package/custom/
-          fi
-          
-          # 验证文件结构
-          echo "=== package/custom/iptest 目录结构 ==="
-          ls -R source/package/custom/iptest/
-          echo "=== src 目录内容 ==="
-          ls -la source/package/custom/iptest/src/
+# 如果你的程序有多个 binary 或特殊编译 flags，可以在这里加
+# GO_PKG_BUILD_FLAGS:= -tags netgo
 
-      - name: Compile Packages
-        run: |
-          cd source
-          
-          # 解析平台
-          TARGET=$(echo ${{ matrix.platform }} | cut -d'/' -f1 | tr '/' '_')
-          SUBTARGET=$(echo ${{ matrix.platform }} | cut -d'/' -f2)
-          
-          # 基本配置
-          echo "CONFIG_TARGET_${TARGET}=y" > .config
-          echo "CONFIG_TARGET_\( {TARGET}_ \){SUBTARGET}=y" >> .config
+define Build/Compile
+	$(call GoPackage/Build/Compile)
+endef
+
+$(eval $(call GoPackage,iptest))
+$(eval $(call BuildPackage,iptest))          echo "CONFIG_TARGET_\( {TARGET}_ \){SUBTARGET}=y" >> .config
           
           # 针对 RAX3000M 的特定设备配置（mediatek/filogic）
           if [ "${{ matrix.platform }}" = "mediatek/filogic" ]; then
