--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,143 +29,4 @@ define Build/Compile
 endef
 
 $(eval $(call GoPackage,iptest))
-$(eval $(call BuildPackage,iptest))          echo "CONFIG_TARGET_\( {TARGET}_ \){SUBTARGET}=y" >> .config
-          
-          # 针对 RAX3000M 的特定设备配置（mediatek/filogic）
-          if [ "${{ matrix.platform }}" = "mediatek/filogic" ]; then
-            echo "CONFIG_TARGET_DEVICE_mediatek_filogic_DEVICE_cmcc_rax3000m=y" >> .config
-          fi
-          
-          # 启用双格式支持并选中自定义包
-          echo "CONFIG_PACKAGE_APK=y" >> .config
-          echo "CONFIG_PACKAGE_IPKG=y" >> .config
-          echo "CONFIG_PACKAGE_iptest=m" >> .config
-          if [ -d "package/custom/luci-app-iptest" ]; then
-            echo "CONFIG_PACKAGE_luci-app-iptest=m" >> .config
-          fi
-          
-          make defconfig
-          
-          # 准备宿主机工具和工具链
-          echo ">> 正在准备宿主机工具和工具链..."
-          make tools/install -j$(nproc) || make tools/install V=s
-          make toolchain/install -j$(nproc) || make toolchain/install V=s
-          
-          # Go 编译环境优化
-          # 现在已有 go.mod，正常使用模块模式
-          # 如果 iptest 是纯 Go（无 CGO 依赖），设为 0 可避免交叉编译问题
-          # 如果有 CGO 依赖，可改为 export CGO_ENABLED=1
-          export CGO_ENABLED=0
-          
-          # 编译 iptest 核心程序
-          echo ">> 正在编译 iptest 核心程序..."
-          make package/custom/iptest/compile V=s -j$(nproc) || make package/custom/iptest/compile V=s
-          
-          # 编译 LuCI 界面（如果存在）
-          if [ -d "package/custom/luci-app-iptest" ]; then
-            echo ">> 正在编译 luci-app-iptest..."
-            make package/custom/luci-app-iptest/compile V=s -j$(nproc) || make package/custom/luci-app-iptest/compile V=s
-          fi
-
-      - name: Organize Files
-        run: |
-          mkdir -p publish
-          echo ">> 搜集编译产物（iptest 相关 ipk/apk）..."
-          find source/bin/ -type f \( -name "*.ipk" -o -name "*.apk" \) | grep -i "iptest" | xargs -I {} cp {} publish/
-          echo ">> 搜集所有产物（完整列表）..."
-          find source/bin/ -type f \( -name "*.ipk" -o -name "*.apk" \) -exec cp {} publish/ \;
-
-      - name: Check Results
-        run: |
-          echo "📦 最终产物清单:"
-          ls -lh publish/
-          if [ -z "$(ls -A publish)" ]; then
-            echo "❌ 错误: 未发现任何编译产物!"
-            exit 1
-          fi
-          echo "✅ 编译产物已收集到 publish/ 目录"
-
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: iptest-${{ matrix.platform == 'x86/64' && 'x86_64' || (matrix.platform == 'rockchip/armv8' && 'rockchip_armv8' || (matrix.platform == 'mediatek/filogic' && 'filogic' || 'mt7621')) }}
-          path: publish/          
-          # 准备宿主机工具和工具链
-          echo ">> 正在准备宿主机工具和工具链..."
-          make tools/install -j$(nproc) || make tools/install V=s
-          make toolchain/install -j$(nproc) || make toolchain/install V=s
-          
-          # Go 编译环境优化
-          # 现在已有 go.mod，正常使用模块模式
-          # 如果 iptest 是纯 Go（无 CGO 依赖），设为 0 可避免交叉编译问题
-          # 如果有 CGO 依赖，可改为 export CGO_ENABLED=1
-          export CGO_ENABLED=0
-          
-          # 编译 iptest 核心程序
-          echo ">> 正在编译 iptest 核心程序..."
-          make package/custom/iptest/compile V=s -j$(nproc) || make package/custom/iptest/compile V=s
-          
-          # 编译 LuCI 界面（如果存在）
-          if [ -d "package/custom/luci-app-iptest" ]; then
-            echo ">> 正在编译 luci-app-iptest..."
-            make package/custom/luci-app-iptest/compile V=s -j$(nproc) || make package/custom/luci-app-iptest/compile V=s
-          fi
-
-      - name: Organize Files
-        run: |
-          mkdir -p publish
-          echo ">> 搜集编译产物（iptest 相关 ipk/apk）..."
-          find source/bin/ -type f \( -name "*.ipk" -o -name "*.apk" \) | grep -i "iptest" | xargs -I {} cp {} publish/
-          echo ">> 搜集所有产物（完整列表）..."
-          find source/bin/ -type f \( -name "*.ipk" -o -name "*.apk" \) -exec cp {} publish/ \;
-
-      - name: Check Results
-        run: |
-          echo "📦 最终产物清单:"
-          ls -lh publish/
-          if [ -z "$(ls -A publish)" ]; then
-            echo "❌ 错误: 未发现任何编译产物!"
-            exit 1
-          fi
-          echo "✅ 编译产物已收集到 publish/ 目录"
-
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: iptest-${{ matrix.platform == 'x86/64' && 'x86_64' || (matrix.platform == 'rockchip/armv8' && 'rockchip_armv8' || (matrix.platform == 'mediatek/filogic' && 'filogic' || 'mt7621')) }}
-          path: publish/          
-          # 编译宿主机工具和工具链
-          echo ">> 正在准备宿主机工具和工具链..."
-          make tools/install -j$(nproc)
-          make toolchain/install -j$(nproc)
-          
-          # 【核心修复】强制禁用 CGO 以解决本地及 MIPS 架构的编译报错
-          export CGO_ENABLED=0
-          
-          echo ">> 正在编译核心程序..."
-          make package/custom/iptest/compile V=s -j$(nproc)
-          
-          echo ">> 正在编译界面程序..."
-          make package/custom/luci-app-iptest/compile V=s -j$(nproc)
-
-      - name: Organize Files
-        run: |
-          mkdir -p publish
-          echo ">> 搜集编译产物..."
-          # 使用更广的搜索范围
-          find source/bin/ -type f \( -name "*.ipk" -o -name "*.apk" \) -name "*iptest*" -exec cp {} publish/ \;
-
-      - name: Check Results
-        run: |
-          echo "📦 最终产物清单:"
-          ls -lh publish/
-          if [ -z "$(ls -A publish)" ]; then
-            echo "❌ 错误: 未发现编译产物!"
-            exit 1
-          fi
-
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: iptest-${{ matrix.platform == 'x86/64' && 'x86_64' || (matrix.platform == 'rockchip/armv8' && 'rockchip_armv8' || (matrix.platform == 'mediatek/filogic' && 'filogic' || 'mt7621')) }}
-          path: publish/
+$(eval $(call BuildPackage,iptest))
