--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,32 +1,112 @@
-include $(TOPDIR)/rules.mk
+name: Build All Platforms
 
-PKG_NAME:=iptest
-PKG_VERSION:=1.2        # 随便填个版本号
-PKG_RELEASE:=1
+on:
+  workflow_dispatch:
+  push:
+    branches: [ main ]
 
-include $(INCLUDE_DIR)/package.mk
-include $(TOPDIR)/feeds/packages/lang/golang/golang-package.mk
+jobs:
+  build:
+    name: Build for ${{ matrix.platform }}
+    runs-on: ubuntu-24.04
+    strategy:
+      fail-fast: false
+      matrix:
+        platform: ["x86/64", "rockchip/armv8", "mediatek/filogic", "ramips/mt7621"]
 
-define Package/iptest
-  SECTION:=net
-  CATEGORY:=Network
-  TITLE:=iptest - IP Test Tool
-  # 如果有依赖（如需要 libc 或其他包），在这里加，例如 DEPENDS:= +libpthread
-endef
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-define Package/iptest/description
-  A simple IP testing tool written in Go.
-endef
+      - name: Initialization Environment
+        run: |
+          sudo apt update
+          sudo apt install -y build-essential clang flex bison g++ gawk gcc-multilib g++-multilib \
+          gettext git libncurses-dev libssl-dev python3-setuptools python3-dev python3-pyelftools \
+          rsync unzip zlib1g-dev file wget subversion swig
 
-# 模块名必须和 go.mod 里的 module xxx 一致
-GO_PKG:=iptest
+      - name: Clone ImmortalWrt
+        run: |
+          git clone -b master --depth 1 https://github.com/immortalwrt/immortalwrt.git source
+          cd source
+          ./scripts/feeds update -a
+          ./scripts/feeds install -a
 
-# 如果你的程序有多个 binary 或特殊编译 flags，可以在这里加
-# GO_PKG_BUILD_FLAGS:= -tags netgo
+      - name: Setup Custom Package
+        run: |
+          mkdir -p source/package/custom/iptest/src
+          
+          cp iptest/Makefile source/package/custom/iptest/Makefile
+          
+          cp -r iptest/* source/package/custom/iptest/src/ 2>/dev/null || true
+          rm -f source/package/custom/iptest/src/Makefile
+          
+          if [ -d "luci-app-iptest" ]; then
+            cp -r luci-app-iptest source/package/custom/
+          fi
+          
+          echo "=== 包结构验证 ==="
+          ls -R source/package/custom/iptest/
+          ls -la source/package/custom/iptest/src/
 
-define Build/Compile
-	$(call GoPackage/Build/Compile)
-endef
+      - name: Compile Packages
+        run: |
+          cd source
+          
+          export GOPROXY=https://goproxy.cn,direct
+          export GOSUMDB=sum.golang.google.cn
+          
+          TARGET=$(echo ${{ matrix.platform }} | cut -d'/' -f1 | sed 's|/|_|g')
+          SUBTARGET=$(echo ${{ matrix.platform }} | cut -d'/' -f2)
+          
+          cat << EOF > .config
+CONFIG_TARGET_$TARGET=y
+CONFIG_TARGET_${TARGET}_$SUBTARGET=y
+EOF
+          
+          if [ "${{ matrix.platform }}" = "mediatek/filogic" ]; then
+            echo "CONFIG_TARGET_DEVICE_mediatek_filogic_DEVICE_cmcc_rax3000m=y" >> .config
+          fi
+          
+          echo "CONFIG_PACKAGE_APK=y" >> .config
+          echo "CONFIG_PACKAGE_IPKG=y" >> .config
+          
+          echo "CONFIG_PACKAGE_iptest=m" >> .config
+          if [ -d "package/custom/luci-app-iptest" ]; then
+            echo "CONFIG_PACKAGE_luci-app-iptest=m" >> .config
+          fi
+          
+          make defconfig
+          
+          make tools/install -j$(nproc) || make tools/install V=s
+          make toolchain/install -j$(nproc) || make toolchain/install V=s
+          
+          echo ">> 正在编译 iptest..."
+          make package/custom/iptest/compile V=s -j$(nproc) || make package/custom/iptest/compile V=s
+          
+          if [ -d "package/custom/luci-app-iptest" ]; then
+            make package/custom/luci-app-iptest/compile V=s -j$(nproc) || make package/custom/luci-app-iptest/compile V=s
+          fi
+          
+          make package/custom/iptest/install V=s
 
-$(eval $(call GoPackage,iptest))
-$(eval $(call BuildPackage,iptest))
+      - name: Organize Files
+        run: |
+          mkdir -p publish
+          find source/bin/ -type f \( -name "*.ipk" -o -name "*.apk" \) | grep -i "iptest" | xargs -I {} cp {} publish/ || true
+          find source/bin/ -type f \( -name "*.ipk" -o -name "*.apk" \) -exec cp {} publish/ \; || true
+
+      - name: Check Results
+        run: |
+          echo "📦 产物清单:"
+          ls -lh publish/
+          if [ -z "$(ls -A publish)" ]; then
+            echo "❌ 无产物"
+            exit 1
+          fi
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: iptest-${{ matrix.platform == 'x86/64' && 'x86_64' || (matrix.platform == 'rockchip/armv8' && 'rockchip_armv8' || (matrix.platform == 'mediatek/filogic' && 'filogic' || 'mt7621')) }}
+          path: publish/
