--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,9 +21,7 @@ jobs:
       - name: Initialization Environment
         run: |
           sudo apt update
-          sudo apt install -y build-essential clang flex bison g++ gawk gcc-multilib g++-multilib \
-          gettext git libncurses-dev libssl-dev python3-setuptools python3-dev python3-pyelftools \
-          rsync unzip zlib1g-dev file wget subversion swig
+          sudo apt install -y build-essential clang flex bison g++ gawk gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev python3-setuptools python3-dev python3-pyelftools rsync unzip zlib1g-dev file wget subversion swig
 
       - name: Clone ImmortalWrt
         run: |
@@ -35,16 +33,12 @@ jobs:
       - name: Setup Custom Package
         run: |
           mkdir -p source/package/custom/iptest/src
-          
           cp iptest/Makefile source/package/custom/iptest/Makefile
-          
           cp -r iptest/* source/package/custom/iptest/src/ 2>/dev/null || true
           rm -f source/package/custom/iptest/src/Makefile
-          
           if [ -d "luci-app-iptest" ]; then
             cp -r luci-app-iptest source/package/custom/
           fi
-          
           echo "=== Package structure verification ==="
           ls -R source/package/custom/iptest/
           ls -la source/package/custom/iptest/src/
@@ -52,41 +46,30 @@ jobs:
       - name: Compile Packages
         run: |
           cd source
-          
           export GOPROXY=https://goproxy.cn,direct
           export GOSUMDB=sum.golang.google.cn
-          
           TARGET=$(echo ${{ matrix.platform }} | cut -d'/' -f1 | sed 's|/|_|g')
           SUBTARGET=$(echo ${{ matrix.platform }} | cut -d'/' -f2)
-          
           cat << EOF > .config
 CONFIG_TARGET_$TARGET=y
 CONFIG_TARGET_${TARGET}_$SUBTARGET=y
 EOF
-          
           if [ "${{ matrix.platform }}" = "mediatek/filogic" ]; then
             echo "CONFIG_TARGET_DEVICE_mediatek_filogic_DEVICE_cmcc_rax3000m=y" >> .config
           fi
-          
           echo "CONFIG_PACKAGE_APK=y" >> .config
           echo "CONFIG_PACKAGE_IPKG=y" >> .config
-          
           echo "CONFIG_PACKAGE_iptest=m" >> .config
           if [ -d "package/custom/luci-app-iptest" ]; then
             echo "CONFIG_PACKAGE_luci-app-iptest=m" >> .config
           fi
-          
           make defconfig
-          
           make tools/install -j$(nproc) || make tools/install V=s
           make toolchain/install -j$(nproc) || make toolchain/install V=s
-          
           make package/custom/iptest/compile V=s -j$(nproc) || make package/custom/iptest/compile V=s
-          
           if [ -d "package/custom/luci-app-iptest" ]; then
             make package/custom/luci-app-iptest/compile V=s -j$(nproc) || make package/custom/luci-app-iptest/compile V=s
           fi
-          
           make package/custom/iptest/install V=s
 
       - name: Organize Files
@@ -108,35 +91,4 @@ EOF
         uses: actions/upload-artifact@v4
         with:
           name: iptest-${{ matrix.platform | replace('/', '_') }}
-          path: publish/          make tools/install -j$(nproc) || make tools/install V=s
-          make toolchain/install -j$(nproc) || make toolchain/install V=s
-          
-          echo ">> 正在编译 iptest..."
-          make package/custom/iptest/compile V=s -j$(nproc) || make package/custom/iptest/compile V=s
-          
-          if [ -d "package/custom/luci-app-iptest" ]; then
-            make package/custom/luci-app-iptest/compile V=s -j$(nproc) || make package/custom/luci-app-iptest/compile V=s
-          fi
-          
-          make package/custom/iptest/install V=s
-
-      - name: Organize Files
-        run: |
-          mkdir -p publish
-          find source/bin/ -type f \( -name "*.ipk" -o -name "*.apk" \) | grep -i "iptest" | xargs -I {} cp {} publish/ || true
-          find source/bin/ -type f \( -name "*.ipk" -o -name "*.apk" \) -exec cp {} publish/ \; || true
-
-      - name: Check Results
-        run: |
-          echo "📦 产物清单:"
-          ls -lh publish/
-          if [ -z "$(ls -A publish)" ]; then
-            echo "❌ 无产物"
-            exit 1
-          fi
-
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: iptest-${{ matrix.platform == 'x86/64' && 'x86_64' || (matrix.platform == 'rockchip/armv8' && 'rockchip_armv8' || (matrix.platform == 'mediatek/filogic' && 'filogic' || 'mt7621')) }}
           path: publish/
