--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,94 +1,36 @@
-name: Build All Platforms
+- name: Compile Packages
+  run: |
+    cd source
+    export GOPROXY=https://goproxy.cn,direct
+    export GOSUMDB=sum.golang.google.cn
 
-on:
-  workflow_dispatch:
-  push:
-    branches: [ main ]
+    PLATFORM="${{ matrix.platform }}"
+    TARGET=${PLATFORM%/*}
+    SUBTARGET=${PLATFORM#*/}
 
-jobs:
-  build:
-    name: Build for ${{ matrix.platform }}
-    runs-on: ubuntu-24.04
-    strategy:
-      fail-fast: false
-      matrix:
-        platform: ["x86/64", "rockchip/armv8", "mediatek/filogic", "ramips/mt7621"]
+    BUILD_DIR="build-${TARGET}_${SUBTARGET}"
+    mkdir -p "$BUILD_DIR"
+    rsync -a --delete ./ "$BUILD_DIR/"
+    cd "$BUILD_DIR"
 
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Initialization Environment
-        run: |
-          sudo apt update
-          sudo apt install -y build-essential clang flex bison g++ gawk gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev python3-setuptools python3-dev python3-pyelftools rsync unzip zlib1g-dev file wget subversion swig
-
-      - name: Clone ImmortalWrt
-        run: |
-          git clone -b master --depth 1 https://github.com/immortalwrt/immortalwrt.git source
-          cd source
-          ./scripts/feeds update -a
-          ./scripts/feeds install -a
-
-      - name: Setup Custom Package
-        run: |
-          mkdir -p source/package/custom/iptest/src
-          cp iptest/Makefile source/package/custom/iptest/Makefile
-          cp -r iptest/* source/package/custom/iptest/src/ 2>/dev/null || true
-          rm -f source/package/custom/iptest/src/Makefile
-          if [ -d "luci-app-iptest" ]; then
-            cp -r luci-app-iptest source/package/custom/
-          fi
-          echo "=== Package structure verification ==="
-          ls -R source/package/custom/iptest/
-          ls -la source/package/custom/iptest/src/
-
-      - name: Compile Packages
-        run: |
-          cd source
-          export GOPROXY=https://goproxy.cn,direct
-          export GOSUMDB=sum.golang.google.cn
-          TARGET=$(echo ${{ matrix.platform }} | cut -d'/' -f1 | sed 's|/|_|g')
-          SUBTARGET=$(echo ${{ matrix.platform }} | cut -d'/' -f2)
-          cat << EOF > .config
+    # 自动生成 .config
+    cat << EOF > .config
 CONFIG_TARGET_$TARGET=y
 CONFIG_TARGET_${TARGET}_$SUBTARGET=y
+CONFIG_PACKAGE_iptest=m
+CONFIG_PACKAGE_luci-app-iptest=m
 EOF
-          if [ "${{ matrix.platform }}" = "mediatek/filogic" ]; then
-            echo "CONFIG_TARGET_DEVICE_mediatek_filogic_DEVICE_cmcc_rax3000m=y" >> .config
-          fi
-          echo "CONFIG_PACKAGE_APK=y" >> .config
-          echo "CONFIG_PACKAGE_IPKG=y" >> .config
-          echo "CONFIG_PACKAGE_iptest=m" >> .config
-          if [ -d "package/custom/luci-app-iptest" ]; then
-            echo "CONFIG_PACKAGE_luci-app-iptest=m" >> .config
-          fi
-          make defconfig
-          make tools/install -j$(nproc) || make tools/install V=s
-          make toolchain/install -j$(nproc) || make toolchain/install V=s
-          make package/custom/iptest/compile V=s -j$(nproc) || make package/custom/iptest/compile V=s
-          if [ -d "package/custom/luci-app-iptest" ]; then
-            make package/custom/luci-app-iptest/compile V=s -j$(nproc) || make package/custom/luci-app-iptest/compile V=s
-          fi
-          make package/custom/iptest/install V=s
+    [ "$SUBTARGET" = "filogic" ] && echo "CONFIG_TARGET_DEVICE_mediatek_filogic_DEVICE_cmcc_rax3000m=y" >> .config
 
-      - name: Organize Files
-        run: |
-          mkdir -p publish
-          find source/bin/ -type f \( -name "*.ipk" -o -name "*.apk" \) | grep -i "iptest" | xargs -I {} cp {} publish/ || true
-          find source/bin/ -type f \( -name "*.ipk" -o -name "*.apk" \) -exec cp {} publish/ \; || true
+    # 分别编译 APK 和 IPK
+    for FMT in "apk" "ipk"; do
+      sed -i '/^CONFIG_PACKAGE_APK/d' .config
+      sed -i '/^CONFIG_PACKAGE_IPKG/d' .config
+      [ "$FMT" = "apk" ] && echo "CONFIG_PACKAGE_APK=y" >> .config || echo "CONFIG_PACKAGE_IPKG=y" >> .config
+      yes "" | make defconfig
 
-      - name: Check Results
-        run: |
-          echo "=== Build artifacts for ${{ matrix.platform }} ==="
-          ls -lh publish/
-          if [ -z "$(ls -A publish)" ]; then
-            echo "No artifacts generated"
-            exit 1
-          fi
-
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: iptest-${{ matrix.platform | replace('/', '_') }}
-          path: publish/
+      make tools/install -j$(nproc) || make tools/install V=s
+      make toolchain/install -j$(nproc) || make toolchain/install V=s
+      make package/custom/iptest/compile V=s -j$(nproc) || make package/custom/iptest/compile V=s
+      make package/custom/luci-app-iptest/compile V=s -j$(nproc) || true
+    done
